--- a/interfaces/placas.ui
+++ b/interfaces/placas.ui
@@ -62,7 +62,7 @@ background-color:gray;
        <item>
         <widget class="QTabWidget" name="tabWidget">
          <property name="currentIndex">
-          <number>0</number>
+          <number>1</number>
          </property>
          <widget class="QWidget" name="tab">
           <attribute name="title">
@@ -88,7 +88,7 @@ background-color:gray;
             <widget class="QFrame" name="frame_7">
              <property name="styleSheet">
               <string notr="true">QFrame{
-background-color:#138D75;
+background-color:rgb(70, 130, 169);
 	font: 12pt &quot;Microsoft Sans Serif&quot;;
 }
 QTableWidget{
@@ -684,7 +684,7 @@ border:0px;
             <widget class="QFrame" name="frame_3">
              <property name="styleSheet">
               <string notr="true">QFrame{
-background-color:#138D75;
+background-color:rgb(70, 130, 169);
 	font: 12pt &quot;Microsoft Sans Serif&quot;;
 }
 QTableWidget{
