--- a/interfaces/montos.ui
+++ b/interfaces/montos.ui
@@ -110,7 +110,7 @@ background-color:gray;
             <widget class="QFrame" name="frame_2">
              <property name="styleSheet">
               <string notr="true">QFrame{
-background-color:#138D75;
+background-color:rgb(70, 130, 169);
 	font: 12pt &quot;Microsoft Sans Serif&quot;;
 }
 QTableWidget{
@@ -1018,7 +1018,7 @@ border-top:2px solid rgb(0,0,0);
                        <widget class="QFrame" name="frame_9">
                         <property name="styleSheet">
                          <string notr="true">QFrame{
-	background-color:rgb(70, 130, 169);
+	background-color:#707B7C;
 border-right:2px solid rgb(0,0,0);
 border-left:2px solid rgb(0,0,0);
 border-bottom:2px solid rgb(0,0,0);
