--- a/interfaces/loggin.ui
+++ b/interfaces/loggin.ui
@@ -342,6 +342,25 @@ background-color:qlineargradient(spread:pad, x1:0, y1:0.505682 , x2:1 , y2:0.477
                 </property>
                 <layout class="QVBoxLayout" name="verticalLayout_3">
                  <item>
+                  <widget class="QLabel" name="label_2">
+                   <property name="font">
+                    <font>
+                     <family>AnjaliOldLipi</family>
+                     <pointsize>14</pointsize>
+                    </font>
+                   </property>
+                   <property name="text">
+                    <string/>
+                   </property>
+                   <property name="textFormat">
+                    <enum>Qt::AutoText</enum>
+                   </property>
+                   <property name="alignment">
+                    <set>Qt::AlignCenter</set>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
                   <spacer name="verticalSpacer_2">
                    <property name="orientation">
                     <enum>Qt::Vertical</enum>
@@ -390,6 +409,12 @@ background-color:qlineargradient(spread:pad, x1:0, y1:0.505682 , x2:1 , y2:0.477
   border: 4px solid #17202A;
   border-radius: 5px;
 	font: 75 12pt &quot;MS Shell Dlg 2&quot;;
+}
+QLineEdit:focus{
+  
+border-bottom:2.5px solid rgb(112, 113, 232);
+border-right:2.5px solid rgb(112, 113, 232);
+
 }
 </string>
                      </property>
@@ -463,12 +488,19 @@ background-color:qlineargradient(spread:pad, x1:0, y1:0.505682 , x2:1 , y2:0.477
                      </property>
                      <property name="styleSheet">
                       <string notr="true">QLineEdit{
- height: 40px;
- padding: 10px;
- border: 4px solid #17202A;
- border-radius: 5px;
-font: 75 12pt &quot;MS Shell Dlg 2&quot;;
-}</string>
+  height: 40px;
+  padding: 10px;
+  border: 4px solid #17202A;
+  border-radius: 5px;
+	font: 75 12pt &quot;MS Shell Dlg 2&quot;;
+}
+QLineEdit:focus{
+  
+border-bottom:2.5px solid rgb(112, 113, 232);
+border-right:2.5px solid rgb(112, 113, 232);
+
+}
+</string>
                      </property>
                      <property name="text">
                       <string/>
